# upholi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.old  main.rs  package-lock.json
app/: .dockerignore  .eslintrc.json  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.old  index.html  package-lock.json  package.json  rustfmt.toml  sw.js  trunk.toml  tsconfig.json  webmanifest.json  webpack.config.js
app/docker/: nginx.conf  nginx.conf.template
app/docker/conf.d/: nginx.conf
app/docker/nginx_conf.d/: certbot.conf
app/src/: api_client.rs  exif.rs  images.rs  index.jsx  index.tsx  keys.rs  main.rs  repository.rs  wasm_client.rs
app/src/components/: Album.tsx  AlbumView.tsx  Albums.jsx  Albums.tsx  AllUserAlbums.jsx  AllUserAlbums.tsx  App.tsx  AppBody.jsx  AppBody.tsx  AppContainer.jsx  AppContainer.tsx  CollectionSharingSettings.tsx  CollectionView.tsx  ConfirmationDialog.jsx  ContentContainer.jsx  ContentContainer.tsx  CopyUrl.tsx  ExifData.jsx  ExifData.tsx  Header.jsx  Header.tsx  Icons.jsx  Icons.tsx  InputPassword.tsx  Menu.tsx  Modal.jsx  Modal.tsx  ModalAddAlbumToCollection.jsx  ModalAddAlbumToCollection.tsx  ModalAddToAlbum.jsx  ModalAddToAlbum.tsx  ModalConfirmation.jsx  ModalConfirmation.tsx  ModalCopyUrl.jsx  ModalCreateAlbum.jsx  ModalCreateAlbum.tsx  ModalCreateCollection.jsx  ModalCreateCollection.tsx  ModalPhotoDetail.jsx  ModalPhotoDetail.tsx  (+42 more)
app/src/contexts/: AppStateContext.jsx  AppStateContext.ts
app/src/encryption/: aes128.rs  aes256.rs  mod.rs
app/src/entities/: Album.ts  AlbumInfo.ts  Collection.ts  File.ts  ModalPropsBase.ts  Photo.js  Photo.ts
app/src/helpers/: UpholiServiceLocalStorageHelper.ts  UploadHelper.js  UploadHelper.ts  UploadHelperNew.ts  UrlHelper.js  UrlHelper.ts
app/src/hooks/: mod.rs  useAlbum.ts  useAlbumShare.ts  useAlbums.ts  useApiResource.ts  useAuthenticationStatus.ts  useFoundAlbumShare.ts  useHeader.ts  usePhotoThumbnailSource.ts  usePhotoThumbnailSources.ts  usePhotos.ts  useShares.ts  useTitle.ts  useUploadProgress.ts  useUser.ts  use_album.rs  use_album_share.rs  use_albums.rs  use_authenticated.rs  use_authentication_status.rs  use_is_authorized_for_share.rs  use_library_photos.rs  use_on_file_upload_finished.rs  use_overlay.rs  use_photo.rs  use_photo_src.rs  use_share_album.rs  use_shares.rs  use_upload_queue.rs
app/src/models/: Album.ts  AlbumInfo.ts  Collection.ts  Exif.ts  File.ts  GalleryPhoto.ts  HeaderSettings.ts  ModalPropsBase.ts  PageProps.ts  Photo.ts  Share.ts  SharingOptions.ts  User.ts  album.rs  auth_status.rs  library.rs  mod.rs  photo.rs  upload_queue.rs
app/src/pages/: AlbumPage.jsx  AlbumPage.tsx  AlbumsPage.jsx  AlbumsPage.tsx  CollectionPage.jsx  CollectionPage.tsx  CollectionPageBase.jsx  CollectionPageBase.tsx  CollectionView.jsx  CollectionsPage.jsx  CollectionsPage.tsx  LibraryPage.jsx  LibraryPage.tsx  PhotoBasePage.jsx  PhotoPage.jsx  PhotoPage.tsx  PhotosPage.jsx  SharedAlbumPage.jsx  SharedCollectionPage.jsx  SharedCollectionPage.tsx  SharedCollectionPageNew.jsx  SharedCollectionPhotoPage.jsx  SharedPage.jsx  SharedPage.tsx  album.rs  albums.rs  home.rs  library.rs  login.rs  mod.rs  not_found.rs  photo.rs  register.rs  share.rs  shared.rs
app/src/services/: AlbumService.ts  PhotoService.js  PhotoService.ts  UpholiService.ts
app/src/skin/: _cssreset.scss  _fonts.scss  app.component.albums.scss  app.component.collection.scss  app.component.collectionView.scss  app.component.collections.scss  app.component.errors.scss  app.component.exif.scss  app.component.header.scss  app.component.inputPassword.scss  app.component.menu.scss  app.component.modal.scss  app.component.modalAddToAlbum.scss  app.component.modalCopyUrl.scss  app.component.modalCreateAlbum.scss  app.component.modalShareAlbum.scss  app.component.modalShareCollection.scss  app.component.modalSharingOptions.scss  app.component.modalUploadProgress.scss  app.component.overlay.scss  app.component.photoDetail.scss  app.component.photoGallery.scss  app.component.shares.scss  app.component.switch.scss  app.component.toasts.scss  app.component.uploadProgress.scss  app.component.uploadProgressDialog.scss  app.misc.scss  app.page.login.scss  app.scss  theme-default-dark.scss  theme-solarized-dark.scss
app/src/utils/: cache.ts  dom.ts  elements.ts  files.ts  location.ts
app/style/: _fonts.scss  main.scss
app/style/components/: album-thumb.scss  create-album-button.scss  dialog.scss  drop-upload.scss  gallery-detail.scss  gallery-photo.scss  gallery.scss  header.scss  icons.scss  open-library-button.scss  overlay.scss  photo-exif.scss  photo.scss  pick-album.scss  share-info.scss  upload-button.scss  upload-progress.scss
app/style/misc/: buttons.scss  forms.scss  header.scss
app/style/pages/: album.scss  home.scss  library.scss  share.scss  shared.scss
app/style/themes/: theme-default-dark.scss
app/wwwroot/: index.html  sw.js  webmanifest.json
server/: .dockerignore  Cargo.toml  Dockerfile
server/config/: default.toml
server/src/: albums.rs  constants.rs  database.rs  encryption.rs  error.rs  exif.rs  files.rs  handlers.rs  http.rs  ids.rs  images.rs  main.rs  model.rs  oauth2.rs  passwords.rs  photos.rs  routes.rs  session.rs  settings.rs  types.rs
server/src/database/: album.rs  mod.rs  mongodb.rs  photo.rs  session.rs
server/src/entities/: album.rs  collection.rs  exif.rs  mod.rs  photo.rs  photo_new.rs  session.rs  share.rs  user.rs
server/src/files/: mod.rs
server/src/handlers/: files.rs  items.rs  mod.rs  shares.rs  user.rs
server/src/storage/: azure_storage.rs  local_disk.rs  localdisk.rs  mod.rs
server/src/types/: mod.rs
server/src/web/: cookies.rs  handlers.rs  http.rs  mod.rs  oauth2.rs
server/tests/: integration_tests.rs
wasm/: Cargo.toml  build-dev.bat  rustfmt.toml
wasm/src/: aes256.rs  api_client.rs  client.rs  exif.rs  hashing.rs  images.rs  keys.rs  lib.rs  models.rs  multipart.rs  repository.rs  types.rs  wasm_client.rs
wasm/src/client/: helper.rs  http.rs  mod.rs
(+158 files in other folders)
