[package]
name = "hummingbird"
version = "0.1.0"
authors = ["Eric <eric@e10t.nl>"]
edition = "2018"

[dependencies]
http = "0.2.1"
serde = "1.0.106"
base64 = "0.12.0"
image = "0.23.4"
futures = "0.3.4"
actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-service = "1.0.5"
actix-multipart = "0.2.0"
mongodb = "0.9.2"
bson = "0.14.1"