[package]
name = "upholi_app"
version = "0.2.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"

upholi_lib = { path = "../lib" }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
# js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = ["Window", "Location", "Storage", "DataTransfer", "Event", "EventTarget"] }
aes-gcm-siv = "0.10.3"
uuid = { version = "0.8.1", features = ["wasm-bindgen"] }
image = { version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
serde = { version = "1.0", features = ["derive" ] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
rexif = "0.7.3"
base64 = "0.13.0"
reqwest = { version = "0.11.9", features = ["json", "multipart"] }
sha2 = "0.9.8"
anyhow = "1.0.65"
async-trait = "0.1.57"
serde-wasm-bindgen = "0.4.5"
once_cell = "1.16.0"
weblog = "0.3.0"
js-sys = "0.3.61"
yew-hooks = "0.2.0"
