[package]
name = "upholi_app"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.10.3"
anyhow = "1.0.65"
async-trait = "0.1.57"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
image = { version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
js-sys = "0.3.61"
once_cell = "1.16.0"
reqwest = { version = "0.11.9", features = ["json", "multipart"] }
rexif = "0.7.3"
serde = { version = "1.0", features = ["derive" ] }
serde_json = "1.0.64"
serde-wasm-bindgen = "0.4.5"
sha2 = "0.9.8"
upholi_lib = { path = "../lib" }
uuid = { version = "0.8.1", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["Window", "Location", "Storage", "DataTransfer", "Event", "EventTarget", "Node", "DomRect"] }
weblog = "0.3.0"
yew = { version = "0.20", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
bounce = "0.6.1"
gloo = "0.8.0"
