[package]
name = "upholi"
version = "0.1.0"
authors = ["Eric Liefaart"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
upholi_lib = { path = "../lib" }
tokio = { version = "1.0", features = ["macros"] }
http = "0.2.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.12.0"
image = "0.23.4"
futures = "0.3.4"
actix-web = "4.0.0-rc.2"
actix-multipart = "0.4.0-beta.13"
mongodb = { version = "2.0.2" }
bson = { version = "2.0.1", features = ["chrono-0_4"] }
rand = "0.7.3"
bytes = "0.5.4"
md5 = "0.7.0"
lazy_static = "1.4.0"
rexif = "0.7.3"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3.5"
config = "0.10.1"
async-trait = "0.1.51"
once_cell = "1.9.0" # required by 'azure-sdk-for-rust'
azure_core = "0.1.1"
azure_storage = "0.1.0"
azure_storage_blobs = "0.1.0"
aes-gcm-siv = "0.10.0"
async_once = "0.2.1"