[package]
name = "upholi"
version = "0.1.1"
authors = ["Eric Liefaart"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
upholi_lib = { path = "../lib" }
anyhow = "1.0.65"
async_once = "0.2.6"
axum = { version = "0.5.16", features = ["multipart"] }
bson = "2.3.0"
config = "0.10.1"
cookie = "0.16.1"
lazy_static = "1.4.0"
mongodb = "2.2.2"
pbkdf2 = "0.11.0"
serde = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
tower-cookies = "0.7.0"
tower-http = { version = "0.3.4", features = ["fs"] }
azure_core = "0.1.1"
azure_storage = "0.1.0"
azure_storage_blobs = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }