[package]
name = "wasm"
version = "0.1.0"
authors = ["Eric Liefaart <eric@e10t.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.25"
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.51"
aes-gcm-siv = "0.10.0"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
image = { version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
serde = { version = "1.0", features = ["derive" ] }
serde_json = "1.0.64"
chrono = { version = "0.4.11", features = ["serde"] }
rexif = "0.7.3"
# For reqwest I to target the git repo for now, until this commit made it into a release:
# (likely 11.5+)
# https://github.com/seanmonstar/reqwest/commit/e6a1a09f0904e06de4ff1317278798c4ed28af66
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "e6a1a09f0904e06de4ff1317278798c4ed28af66", features = ["json", "multipart"] }
#reqwest = { version = "0.11.4", features = ["json", "multipart"] }