[package]
name = "wasm"
version = "0.1.0"
authors = ["Eric Liefaart"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
upholi_lib = { path = "../lib" }
lazy_static = "1.4.0"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = ["Window", "Location"] }
aes-gcm-siv = "0.10.3"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
image = { version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
serde = { version = "1.0", features = ["derive" ] }
serde_json = "1.0.64"
chrono = { version = "0.4.11", features = ["serde"] }
rexif = "0.7.3"
base64 = "0.13.0"
reqwest = { version = "0.11.9", features = ["json", "multipart"] }
sha2 = "0.9.8"